--- a/public/admin/style.css
+++ b/public/admin/style.css
@@ -2,6 +2,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: Roboto, sans-serif;
+  background-image: url(images/fon2.jpg);
 }
 .header-logo {
   margin-top: 5px;
@@ -31,7 +32,8 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   cursor: pointer;
-  background-color: #a8cfd8;
+  color: white;
+  background-color: #171d63;
   font-size: 17px;
   width: 70px;
   height: 25px;
@@ -48,13 +50,15 @@ body {
   margin: 20px auto;
   width: 900px;
   height: 600px;
-  background-color: white;
+  background-color: rgba(0, 0, 17, 0.48);
 }
 .admin-container__header {
   display: flex;
   width: 900px;
   height: 50px;
-  background-color: #55A4C3;
+  background-image: linear-gradient(to top right, #171d63, #28255e, #3a2c59, #4b3454, #5c3c4f, #6e434a, #7f4b46, #915241, #a25a3c, #b36237, #c56932, #d6712d);
+  background-size: cover;
+  background-repeat: no-repeat;
   justify-content: space-around;
 }
 .admin-container__body {
@@ -68,18 +72,21 @@ body {
   height: 400px;
   display: flex;
   flex-direction: column;
+  color: white;
 }
 .body-registration__fromName {
   margin-top: 10px;
   width: 430px;
   height: 50px;
   display: flex;
+  color: white;
 }
 .body-registration__fromIp {
   margin: 10px 0 10px 0;
   width: 430px;
   height: 50px;
   display: flex;
+  color: white;
 }
 .body-registration__btn {
   margin: 0 auto;
@@ -88,7 +95,7 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   cursor: pointer;
-  background-color: #a8cfd8;
+  background-color: #171d63;
   font-size: 17px;
   width: 250px;
   height: 25px;
@@ -97,12 +104,13 @@ body {
   border-radius: 10px;
   -moz-user-select: none;
   user-select: none;
+  color: white;
 }
 .reg-name {
   margin: 10px 0 0 10px;
   height: 28px;
   width: 350px;
-  background-color: #a8cfd8;
+  background-color: #b36237;
   border: 0;
   text-align: center;
 }
@@ -110,13 +118,13 @@ body {
   margin: 10px 0 0 10px;
   height: 28px;
   width: 350px;
-  background-color: #a8cfd8;
+  background-color: #b36237;
   border: 0;
   text-align: center;
 }
 .reg-name-text {
+  background-color: #b36237;
   border-radius: 5px;
-  background-color: #a8cfd8;
   width: 65px;
   margin-top: 10px;
   padding-top: 5px;
@@ -130,7 +138,7 @@ body {
 }
 .reg-ip-text {
   border-radius: 5px;
-  background-color: #a8cfd8;
+  background-color: #b36237;
   width: 65px;
   margin-top: 10px;
   padding-top: 5px;
@@ -148,5 +156,12 @@ body {
   background-position: center;
   width: 430px;
   height: 400px;
+}
+input {
+  outline: none;
+}
+::placeholder {
+  color: white;
+  font-size: 1em;
 }
 
