--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,9 @@ body {
 .header {
   width: 910px;
   height: 50px;
-  background: #55A4C3;
+  background-image: linear-gradient(to top right, #171d63, #28255e, #3a2c59, #4b3454, #5c3c4f, #6e434a, #7f4b46, #915241, #a25a3c, #b36237, #c56932, #d6712d);
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: space-around;
 }
@@ -37,7 +39,7 @@ body {
   height: 25px;
   width: 80px;
   border-radius: 10px;
-  background-color: #55A4C3;
+  background-color: #171d63;
   font-family: Roboto, sans-serif;
   text-transform: uppercase;
   text-align: center;
@@ -56,7 +58,7 @@ body {
   justify-content: space-around;
   -moz-user-select: none;
   user-select: none;
-  background-color: #a8cfd8;
+  background-color: #b36237;
   margin-top: 10px;
   padding-top: 5px;
   height: 25px;
@@ -152,13 +154,12 @@ body {
   margin: 150px auto;
   width: 300px;
   height: 220px;
-  background-color: white;
+  background-image: linear-gradient(to top right, #171d63, #28255e, #3a2c59, #4b3454, #5c3c4f, #6e434a, #7f4b46, #915241, #a25a3c, #b36237, #c56932, #d6712d);
   border-radius: 7px;
 }
 .modal-users-header {
   width: 300px;
   height: 50px;
-  background-color: #55A4C3;
   display: flex;
   justify-content: space-around;
 }
@@ -187,6 +188,7 @@ body {
   height: 50px;
 }
 .modal-users-error__logo {
+  color: white;
   display: none;
   float: left;
   margin-top: 15px;
@@ -197,6 +199,7 @@ body {
   background-size: cover;
 }
 .modal-users-error__text {
+  color: white;
   display: none;
   font-family: Roboto, sans-serif;
   float: right;
@@ -223,7 +226,7 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   cursor: pointer;
-  background-color: #55A4C3;
+  background-color: #171d63;
   font-size: 17px;
   width: 70px;
   color: #fff;
@@ -232,9 +235,12 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   user-select: none;
+  transition: 0.8s;
 }
 .modal-users-send:hover {
   box-shadow: 0 0 10px rgba(219, 130, 36, 0.5);
+  background-color: #d6712d;
+  color: #171d63;
 }
 .window-logIn-admin {
   display: none;
@@ -253,10 +259,9 @@ body {
   margin: 150px auto;
   width: 300px;
   height: 240px;
-  background-color: white;
+  background-image: linear-gradient(to top right, #171d63, #28255e, #3a2c59, #4b3454, #5c3c4f, #6e434a, #7f4b46, #915241, #a25a3c, #b36237, #c56932, #d6712d);
 }
 .modal-admin-header {
-  background-color: #55A4C3;
   width: 300px;
   height: 50px;
   display: flex;
@@ -303,6 +308,7 @@ body {
   background-size: cover;
 }
 .modal-admin-error__text {
+  color: white;
   display: none;
   font-family: Roboto, sans-serif;
   float: right;
@@ -329,7 +335,7 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   cursor: pointer;
-  background-color: #55A4C3;
+  background-color: #171d63;
   font-size: 17px;
   width: 70px;
   color: #fff;
@@ -338,8 +344,11 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   user-select: none;
+  transition: 0.5s;
 }
 .modal-admin-send:hover {
+  background-color: #d6712d;
+  color: #171d63;
   box-shadow: 0 0 10px rgba(219, 130, 36, 0.5);
 }
 .message-body {
@@ -539,6 +548,13 @@ body {
   font-size: 12px;
   text-align: center;
   transition: 0.5s;
+}
+input {
+  outline: none;
+}
+::placeholder {
+  color: black;
+  font-size: 1em;
 }
 .chat {
   margin: 0 auto;
